WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48251
Java applets don't display on the page
https://bugs.webkit.org/show_bug.cgi?id=48251
Summary
Java applets don't display on the page
Anders Carlsson
Reported
2010-10-25 10:38:07 PDT
Java applets don't display on the page
Attachments
Patch
(8.77 KB, patch)
2010-10-25 10:47 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-25 10:44:36 PDT
<
rdar://problem/8483759
>
Anders Carlsson
Comment 2
2010-10-25 10:47:12 PDT
Created
attachment 71769
[details]
Patch
Anders Carlsson
Comment 3
2010-10-25 10:59:08 PDT
Committed
r70464
: <
http://trac.webkit.org/changeset/70464
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug