Java applets don't display on the page https://bugs.webkit.org/show_bug.cgi?id=48251 <rdar://problem/8483759>

Reviewed by Dan Bernstein.

Add WKPreferencesSetJavaEnabled and initialize it to true by default, matching old WebKit.

* Shared/WebPreferencesStore.cpp:
(WebKit::WebPreferencesStore::WebPreferencesStore):
Initialize javaEnabled.

(WebKit::WebPreferencesStore::encode):
Encode javaEnabled.

(WebKit::WebPreferencesStore::decode):
Decode javaEnabled.

* Shared/WebPreferencesStore.h:
Add javaEnabled.

* UIProcess/API/C/WKPreferences.cpp:
(WKPReferencesSetJavaEnabled):
(WKPReferencesGetJavaEnabled):
Call the WebPreferences functions.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::createJavaAppletWidget):
Just call createPlugin.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
Call Settings::setJavaEnabled.

Canonical link: https://commits.webkit.org/61000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70464 268f45cc-cd09-0410-ab3c-d52691b4dbfc