WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -717,6 +717,7 @@ void WebPage::updatePreferences(const WebPreferencesStore& store)
     settings->setJavaScriptEnabled(store.javaScriptEnabled);
     settings->setLoadsImagesAutomatically(store.loadsImagesAutomatically);
     settings->setPluginsEnabled(store.pluginsEnabled);
+    settings->setJavaEnabled(store.javaEnabled);
     settings->setOfflineWebApplicationCacheEnabled(store.offlineWebApplicationCacheEnabled);
     settings->setLocalStorageEnabled(store.localStorageEnabled);
     settings->setXSSAuditorEnabled(store.xssAuditorEnabled);
